tests/regression/errors/basic/syntax_error_19.csd
// Syntax error test 19 - missing semicolon
sus x drip = 19
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
